se agrega detino producto en nuevo despacho
